--- a/servidor-simple/wwwroot/40.html
+++ b/servidor-simple/wwwroot/40.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Página no encontrada</title>
+    <title>Pagina no encontrada</title>
     <style>
         body {
             font-family: Arial, sans-serif;
